@startuml

class Project {
    id: Int
    name: String
    ...
}

class Label {
    id: Int
    category:String
    name: String
    description: String?
    colour: String
    computedBy: String?
}

note right
    ""computedBy"" is the FQCN of
    a ""LabelProvider"" extension
end note

Project "0..*" -- "0..*" Label
(Project, Label) .. ProjectLabel

class ProjectLabel {
    id: Int
    project: Int
    label: Int
}

interface LabelProvider
interface LabelService

LabelProvider ..> ProjectLabel: creates
LabelProvider .up.> Label: creates
LabelProvider .up.> LabelService: uses

LabelService .left.> ProjectLabel: manages
LabelService .> Label: manages

@enduml
